<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_pizza"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_pepperoni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pepperoni_pizza" />

    <Button
        android:id="@+id/btn_margherita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/margherita_pizza" />

</LinearLayout>