<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_order_summary"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:text="@string/tv_order_text"
            android:textSize="18sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_order_pizza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_500"
            android:text="@string/order_main_text"

            android:textColor="#F6F6F6" />


        <Button
            android:id="@+id/btn_order_side"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_500"
            android:text="@string/order_side_text"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_store_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_500"
            android:text="@string/store_info_text"
            android:textColor="@color/white" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>