<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:background="@color/purple_500"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:layout_height="wrap_content"
        android:text="@string/new_store" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store_name" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:hint="輸入名稱"
        android:layout_height="wrap_content"

        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store_phone" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="輸入電話號碼"
        android:inputType="phone" />
</androidx.appcompat.widget.LinearLayoutCompat>